--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'de.hsh'
 version '1.0-SNAPSHOT'
 
 buildscript {
-	ext.kotlin_version = '1.2.0'
+	ext.kotlin_version = '1.2.10'
 
 	repositories {
 		mavenCentral()
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
 	compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+	compile 'no.tornado:tornadofx:1.7.13'
 	compile group: 'org.jocl', name: 'jocl', version: '2.0.0'
 	compile group: 'org.jogamp.jocl', name: 'jocl-main', version: '2.3.2'
 	compile group: 'org.jogamp.jocl', name: 'jocl', version: '2.3.2'
