--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,13 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'application'
 
 repositories {
 	mavenCentral()
 }
+
+mainClassName = 'AppStarter'
 
 dependencies {
 	compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
